src/objects/NRG_String_Component__c.object
<CustomObject>
    <description>NRG SunLease Component Parts</description>
    <fields>
        <fullName>Group_Code__c</fullName>
        <label>Group Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inverter_and_Transformer__c</fullName>
        <description>Inverter and Transformer</description>
        <inlineHelpText>Inverter and Transformer</inlineHelpText>
        <label>Inverter and Transformer</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <description>Manufacturer</description>
        <inlineHelpText>Manufacturer</inlineHelpText>
        <label>Manufacturer</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Number__c</fullName>
        <description>Model Number</description>
        <inlineHelpText>Model Number</inlineHelpText>
        <label>Model Number</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PV_module_nameplate_DC_rating__c</fullName>
        <description>PV module nameplate DC rating</description>
        <inlineHelpText>PV module nameplate DC rating</inlineHelpText>
        <label>PV module nameplate DC rating</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Power_Output__c</fullName>
        <description>Power Output</description>
        <inlineHelpText>Power Output</inlineHelpText>
        <label>Power Output</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>String_Component_Id__c</fullName>
        <label>String Component Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type</description>
        <inlineHelpText>Type</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Module</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inverter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Racking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monitoring</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>NRG String Component</label>
    <listViews>
        <fullName>All</fullName>
        <columns>String_Component_Id__c</columns>
        <columns>Group_Code__c</columns>
        <columns>NAME</columns>
        <columns>Inverter_and_Transformer__c</columns>
        <columns>Manufacturer__c</columns>
        <columns>Model_Number__c</columns>
        <columns>Power_Output__c</columns>
        <columns>PV_module_nameplate_DC_rating__c</columns>
        <columns>Type__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>NRG String Component Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NRG String Components</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>